[fix] fix resizer z-index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -267,6 +267,7 @@ main{
   top: 0;
   width: $pane-resizer-width;
   cursor: ew-resize;
+  z-index: 2;
 }
 
 #chapter{
